--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   {%- include head.html -%}
-  <body class="bg-blue-200 text-gray-900 font-basic">
+  <body class="bg-gray-100 text-gray-900 font-basic">
 
         {%- include header.html -%}
         <main class="container py-10 lg:-20 max-w-3xl mb-20 lg:mb-64">
