--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,73 +1,17 @@
 <header>
   <div class="container max-w-3xl flex px-2 py-6">
     <div class="flex-grow">
-      {% if page.layout != "home" %}
+      
       <a
-        class="inline-block py-2 px-3 rounded-lg shadow uppercase bg-white hover:bg-gray-300"
+        class="text-xl md:text-2xl font-medium"
         href="{{site.baseurl}}/{% if page.lang == 'en' %}en{% endif %}"
       >
-        <?xml version="1.0" ?><!DOCTYPE svg PUBLIC '-//W3C//DTD SVG 1.1//EN' 'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'>
-        <svg
-          height="1.5rem"
-          id="Layer_1"
-          style="enable-background: new 0 0 512 512"
-          version="1.1"
-          viewBox="0 0 512 512"
-          width="1.5rem"
-          xml:space="preserve"
-          xmlns="http://www.w3.org/2000/svg"
-          xmlns:xlink="http://www.w3.org/1999/xlink"
-        >
-          <polygon
-            points="352,128.4 319.7,96 160,256 160,256 160,256 319.7,416 352,383.6 224.7,256 "
-          />
-        </svg>
+        Desaltung ≈
       </a>
-      {% endif %}
+
     </div>
     <div>
-      {% if page.layout != "home" %}
-      <button
-        class="block py-2 px-3 mr-2 rounded-lg shadow uppercase bg-white hover:bg-gray-300"
-        onclick="window.print()"
-      >
-        {% if page.lang == 'en' %} Print {% endif %} {% if page.lang == 'cz' %}
-        Tisknout {% endif %}
-      </button>
-      {% endif %}
-    </div>
-    <div>
-      {% if page.layout != "home" %}
-      <ul class="flex">
-        {% assign documents=site.documents | where:"author.name",
-        page.author.name | sort: 'lang' %} {% for document in documents %}
-        <li class="block ml-2">
-          <a
-            href="{{site.baseurl}}{{ document.url }}"
-            class="block py-2 px-3 rounded-lg shadow uppercase bg-white hover:bg-gray-300 {% if page.lang == document.lang %} bg-gray-400 {% endif %}"
-            >{{ document.lang }}</a
-          >
-        </li>
-        {% endfor %}
-      </ul>
-      {% endif %} {% if page.layout == "home" %}
-      <ul class="flex">
-        <li class="block ml-2">
-          <a
-            href="{{site.baseurl}}/"
-            class="block py-2 px-3 rounded-lg shadow uppercase bg-white hover:bg-gray-300 {% if page.lang == 'cz' %} bg-gray-400 {% endif %}"
-            >cz</a
-          >
-        </li>
-        <li class="block ml-2">
-          <a
-            href="{{site.baseurl}}/en"
-            class="block py-2 px-3 rounded-lg shadow uppercase bg-white hover:bg-gray-300 {% if page.lang == 'en' %} bg-gray-400 {% endif %}"
-            >en</a
-          >
-        </li>
-      </ul>
-      {% endif %}
+
     </div>
   </div>
 </header>
