--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,6 @@ layout: default
 </h1>
 
 
-<article class="prose prose-xl lg:prose-2xl">
+<article class="prose prose-lg lg:prose-2xl">
   {{ content }}
 </article>
