--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,12 +2,8 @@
 layout: default
 ---
 
-<h2 class="text-white">{{ page.headline-sm }}</h2>
 <h1 class="text-white font-thin text-4xl md:text-5xl mb-10 lg:mb-20">
   {{ page.headline }}
 </h1>
 
-
-<article class="prose prose-lg lg:prose-2xl">
-  {{ content }}
-</article>
+<article class="prose prose-lg lg:prose-2xl">{{ content }}</article>
