--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -14,7 +14,11 @@
 />
 <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 <meta property="og:site_name" content="{{ site.title }}" />
-<meta property="og:image" content="{{page.thumb}}" />
+<meta
+  property="og:image"
+  content="{{ site.img_url }}c_thumb,h_300,w_500{{ page.thumb }}"
+/>
+
 <meta name="twitter:card" content="summary" />
 <meta
   name="twitter:description"
@@ -27,5 +31,8 @@ page.description }}{% else %}{{ site.description }}{% endif %}"
 %}{{ site.title }}{% endif %}"
 />
 <meta name="twitter:site" content="@S_SCHIACCI" />
-<meta name="twitter:image" content="{{page.thumb}}" />
+<meta
+  name="twitter:image"
+  content="{{ site.img_url }}c_thumb,h_300,w_500{{ page.thumb }}"
+/>
 <meta name="twitter:creator" content="@S_SCHIACCI" />
