--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   {%- include head.html -%}
-  <body class="bg-gray-100 text-gray-900 font-basic">
+  <body class="text-gray-800 font-basic">
+    <div class="fog-4 h-40 w-full fixed top-0 z-50"></div>
+    <div class="fog-1 mt-4 h-40 w-full fixed top-0 z-50"></div>
+    <div class="fog-2 mt-4 h-40 w-full fixed top-0 z-50"></div>
+    <div class="fog-3 mt-4 h-40 w-full fixed top-0 z-50"></div>
 
-        {%- include header.html -%}
-        <main class="container py-10 lg:-20 max-w-3xl mb-20 lg:mb-64">
-          {{ content }}
-        </main>
-        {%- include footer.html -%}
-    
+    {%- include header.html -%}
+    <main class="container max-w-3xl mb-20">{{ content }}</main>
+    {%- include footer.html -%}
+
     <script src="{{ site.baseurl }}/dist/bundle.js"></script>
   </body>
 </html>
