--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,13 @@
 <header>
-  <div class="container max-w-3xl flex px-2 py-6">
+  <div class="max-w-2xl lg:max-w-4xl mx-auto flex px-2 pt-20 pb-10">
     <div class="flex-grow">
-      
       <a
         class="text-xl md:text-2xl font-medium"
         href="{{site.baseurl}}/{% if page.lang == 'en' %}en{% endif %}"
       >
         Desaltung ≈
       </a>
-
     </div>
-    <div>
-
-    </div>
+    <div></div>
   </div>
 </header>
