--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 
-<article class="prose prose-lg lg:prose-2xl">{{ content }}</article>
+<article class="mx-auto px-2 prose prose-lg lg:prose-2xl">
+  {{ content }}
+</article>
