--- a/_layouts/document.html
+++ b/_layouts/document.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article
-  class="prose md:prose-md max-w-none mx-auto font-body shadow-lg p-5 md:p-10 bg-gray-100"
+  class="mx-auto prose md:prose-md max-w-none mx-auto font-body shadow-lg p-5 md:p-10 bg-gray-100"
 >
   <h3 class="font-basic">{{ page.author.position }}</h3>
   <h1 class="font-basic font-thin mb-10 lg:mb-20">{{ page.author.name }}</h1>
