--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="max-w-2xl lg:max-w-4xl mx-auto flex px-2 pt-20 pb-10">
+  <div class="max-w-xl mx-auto flex px-2 pt-20 pb-10">
     <div class="flex-grow">
       <a
         class="text-xl md:text-2xl font-medium"
