--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,4 @@
 layout: default
 ---
 
-<article class="mx-auto px-2 prose prose-lg lg:prose-2xl">
-  {{ content }}
-</article>
+<article class="mx-auto px-2 prose">{{ content }}</article>
