--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,15 @@
 <html lang="en">
   {%- include head.html -%}
   <body class="text-gray-800 font-basic overflow-x-hidden">
+    <div class="pointer-events-none fog-4 h-64 w-full absolute top-0"></div>
     <div
-      class="pointer-events-none fog-4 h-56 w-full absolute top-0 z-50"
+      class="pointer-events-none fog-1 mt-24 md:mt-32 h-56 w-full absolute top-0 z-50"
     ></div>
     <div
-      class="pointer-events-none fog-1 mt-20 h-56 w-full absolute top-0 z-50"
+      class="pointer-events-none fog-2 mt-40 md:mt-48 h-56 w-full absolute top-0 z-50"
     ></div>
     <div
-      class="pointer-events-none fog-2 mt-20 h-56 w-full absolute top-0 z-50"
-    ></div>
-    <div
-      class="pointer-events-none fog-3 mt-20 h-56 w-full absolute top-0 z-50"
+      class="pointer-events-none fog-3 mt-24 md:mt-32 h-56 w-full absolute top-0 z-50"
     ></div>
 
     {%- include header.html -%}
