--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-<article class="mx-auto px-2 prose">{{ content }}</article>
+<article class="mx-auto px-2 prose md:prose-md">{{ content }}</article>
