--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,15 +4,17 @@
   <body class="text-gray-800 font-basic overflow-x-hidden">
     <div class="pointer-events-none fog-4 h-64 w-full absolute top-0"></div>
 
-    <div class="absolute top-0 h-64 mt-40 w-full overflow-x-hidden">
+    <div
+      class="pointer-events-none absolute top-0 mt-32 h-screen w-full overflow-x-hidden"
+    >
       <div
-        class="pointer-events-none fog-1 md:mt-32 h-48 w-full absolute top-0 z-50"
+        class="pointer-events-none fog-1 h-48 w-full absolute top-0 z-50"
       ></div>
       <div
-        class="pointer-events-none fog-2 md:mt-48 h-48 w-full absolute top-0 z-50"
+        class="pointer-events-none fog-2 h-48 w-full absolute top-0 z-50"
       ></div>
       <div
-        class="pointer-events-none fog-3 md:mt-32 h-48 w-full absolute top-0 z-50"
+        class="pointer-events-none fog-3 h-48 w-full absolute top-0 z-50"
       ></div>
     </div>
 
