--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 
-<article class="mx-auto px-2 prose md:prose-md">{{ content }}</article>
+<article id="main-article" class="mx-auto px-2 prose md:prose-md">
+  {{ content }}
+</article>
