--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,32 @@
 
 @tailwind utilities;
 
-@import "./css/fonts.css";
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url("./Inter-Medium.woff") format("woff"),
+    url("./Inter-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url("./Inter-Regular.woff") format("woff"),
+    url("./Inter-Regular.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+  src: url("./Inter-Light.woff") format("woff"),
+    url("./Inter-Light.woff2") format("woff2");
+}
 
 /* .fog {
   background: linear-gradient(
@@ -40,7 +65,7 @@
 }
 
 .fog-4 {
-  background: linear-gradient(rgb(78, 134, 255), rgba(255, 255, 255, 0));
+  background: linear-gradient(rgb(0, 90, 170), rgba(255, 255, 255, 0));
 }
 
 @keyframes gradient {
@@ -52,7 +77,7 @@
     opacity: 1;
     transform: translate(20vw, 100px);
   }
-  70% {
+  90% {
     opacity: 1;
     transform: translate(30vw, 70px);
   }
@@ -65,13 +90,13 @@
 @keyframes gradient-2 {
   0% {
     opacity: 0;
-    transform: translate(0vw, 70px);
+    transform: translate(0vw, 50px);
   }
   20% {
     opacity: 1;
-    transform: translate(0vw, 70px);
+    transform: translate(0vw, 50px);
   }
-  70% {
+  80% {
     opacity: 1;
     transform: translate(50vw, 40px);
   }
@@ -84,13 +109,13 @@
 @keyframes gradient-3 {
   0% {
     opacity: 0;
-    transform: translate(-20vw, 50px);
+    transform: translate(-20vw, 40px);
   }
   20% {
     opacity: 1;
-    transform: translate(-30vw, 50px);
+    transform: translate(-30vw, 40px);
   }
-  70% {
+  90% {
     transform: translate(-30vw, 30px);
     opacity: 1;
   }
@@ -98,6 +123,24 @@
     transform: translate(0vw, 0px);
     opacity: 0;
   }
+}
+
+article > p,
+article > h1,
+article > h2,
+article > h3,
+article > video {
+  filter: blur(10px);
+  transition: all 1s;
+}
+
+article > p.inView,
+article > h1.inView,
+article > h2.inView,
+article > h3.inView,
+article > video.inView {
+  opacity: 1;
+  filter: blur(0);
 }
 
 /* @keyframes 2 {
