--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,8 @@
 <html lang="en">
   {%- include head.html -%}
   <body class="text-gray-800 font-basic overflow-x-hidden">
-    <div class="pointer-events-none fog-4 h-64 w-full absolute top-0"></div>
+    <div class="pointer-events-none blankit h-64 w-full absolute top-0"></div>
+    <!-- <div class="pointer-events-none blankit-2 h-64 w-full absolute top-0"></div> -->
 
     <div
       class="pointer-events-none absolute top-0 mt-32 h-screen w-full overflow-x-hidden"
