--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 
-<article id="main-article" class="mx-auto px-2 prose md:prose-md">
+<article id="main-article" class="mx-auto px-2 prose md:prose-md max-w-5xl">
   {{ content }}
 </article>
