--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="bg-gray-900 text-center py-48">
-  <p class="text-sm text-gray-800">
-    
-  <a href="https://simon-barak.link">simon-barak.link</a></p>
+  <p class="text-sm text-blue-600">
+    <a href="https://simon-barak.link">simon-barak.link</a>
+  </p>
 </footer>
