Finally I fixed fonts with webpack :)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
         class="text-3xl md:text-4xl"
         href="{{site.baseurl}}/{% if page.lang == 'en' %}en{% endif %}"
       >
-        <img class="logo" src="./dist/desaltung-logo.svg" />
+        <img class="logo" src="./desaltung-logo.svg" />
         Desaltung
       </a>
     </div>
