--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,6 @@
     <main class="mb-20">{{ content }}</main>
     {%- include footer.html -%}
 
-    <script src="{{ site.baseurl }}/dist/bundle.js"></script>
+    <script src="{{ site.baseurl }}/bundle.js"></script>
   </body>
 </html>
