--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("./Inter-Medium.woff") format("woff"),
-    url("./Inter-Medium.woff2") format("woff2");
+  src: url("./fonts/Inter-Medium.woff") format("woff"),
+    url("./fonts/Inter-Medium.woff2") format("woff2");
 }
 
 @font-face {
@@ -18,8 +18,8 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./Inter-Regular.woff") format("woff"),
-    url("./Inter-Regular.woff2") format("woff2");
+  src: url("./fonts/Inter-Regular.woff") format("woff"),
+    url("./fonts/Inter-Regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -27,8 +27,8 @@
   font-style: normal;
   font-weight: 100;
   font-display: swap;
-  src: url("./Inter-Light.woff") format("woff"),
-    url("./Inter-Light.woff2") format("woff2");
+  src: url("./fonts/Inter-Light.woff") format("woff"),
+    url("./fonts/Inter-Light.woff2") format("woff2");
 }
 
 .logo {
