--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,13 @@
       class="pointer-events-none absolute top-0 mt-32 h-screen w-full overflow-x-hidden"
     >
       <div
-        class="pointer-events-none fog-1 h-48 w-full absolute top-0 z-50"
+        class="pointer-events-none fog-1 h-48 lg:h-64 w-full absolute top-0 z-50"
       ></div>
       <div
-        class="pointer-events-none fog-2 h-48 w-full absolute top-0 z-50"
+        class="pointer-events-none fog-2 h-48 lg:h-64 w-full absolute top-0 z-50"
       ></div>
       <div
-        class="pointer-events-none fog-3 h-48 w-full absolute top-0 z-50"
+        class="pointer-events-none fog-3 h-48 lg:h-64 w-full absolute top-0 z-50"
       ></div>
     </div>
 
