--- a/main.css
+++ b/main.css
@@ -702,6 +702,7 @@ video {
   margin-bottom: 0.8888889em;
   line-height: 1.1111111;
   font-family: Inter;
+  font-family: sans-serif;
 }
 
 .prose h2 {
@@ -712,6 +713,7 @@ video {
   margin-bottom: 1em;
   line-height: 1.3333333;
   font-family: Inter;
+  font-family: sans-serif;
 }
 
 .prose h3 {
@@ -722,6 +724,7 @@ video {
   margin-bottom: 0.6em;
   line-height: 1.6;
   font-family: Inter;
+  font-family: sans-serif;
 }
 
 .prose h4 {
@@ -2195,40 +2198,40 @@ video {
 
 @keyframes gradient {
   0% {
-    transform: translate(20vw, 100px);
+    transform: translate(20vw, 40vh);
     opacity: 0;
   }
 
   20% {
     opacity: 1;
-    transform: translate(20vw, 100px);
+    transform: translate(10vw, 10vh);
   }
 
   90% {
     opacity: 1;
-    transform: translate(30vw, 70px);
+    transform: translate(30vw, 3vh);
   }
 
   100% {
     opacity: 0;
-    transform: translate(40vw, 0px);
+    transform: translate(40vw, 0vh);
   }
 }
 
 @keyframes gradient-2 {
   0% {
     opacity: 0;
-    transform: translate(0vw, 50px);
+    transform: translate(0vw, 30vh);
   }
 
   20% {
     opacity: 1;
-    transform: translate(0vw, 50px);
+    transform: translate(0vw, 25vh);
   }
 
   80% {
     opacity: 1;
-    transform: translate(50vw, 40px);
+    transform: translate(50vw, 10vh);
   }
 
   100% {
@@ -2466,6 +2469,7 @@ article ol {
     margin-bottom: 0.8888889em;
     line-height: 1.1111111;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .sm\:prose h2 {
@@ -2476,6 +2480,7 @@ article ol {
     margin-bottom: 1em;
     line-height: 1.3333333;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .sm\:prose h3 {
@@ -2486,6 +2491,7 @@ article ol {
     margin-bottom: 0.6em;
     line-height: 1.6;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .sm\:prose h4 {
@@ -3745,6 +3751,7 @@ article ol {
     margin-bottom: 0.8888889em;
     line-height: 1.1111111;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .md\:prose h2 {
@@ -3755,6 +3762,7 @@ article ol {
     margin-bottom: 1em;
     line-height: 1.3333333;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .md\:prose h3 {
@@ -3765,6 +3773,7 @@ article ol {
     margin-bottom: 0.6em;
     line-height: 1.6;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .md\:prose h4 {
@@ -5040,6 +5049,7 @@ article ol {
     margin-bottom: 0.8888889em;
     line-height: 1.1111111;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .lg\:prose h2 {
@@ -5050,6 +5060,7 @@ article ol {
     margin-bottom: 1em;
     line-height: 1.3333333;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .lg\:prose h3 {
@@ -5060,6 +5071,7 @@ article ol {
     margin-bottom: 0.6em;
     line-height: 1.6;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .lg\:prose h4 {
@@ -6192,6 +6204,10 @@ article ol {
     font-size: 1.5rem;
   }
 
+  .lg\:h-64 {
+    height: 16rem;
+  }
+
   .lg\:mb-20 {
     margin-bottom: 5rem;
   }
@@ -6323,6 +6339,7 @@ article ol {
     margin-bottom: 0.8888889em;
     line-height: 1.1111111;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .xl\:prose h2 {
@@ -6333,6 +6350,7 @@ article ol {
     margin-bottom: 1em;
     line-height: 1.3333333;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .xl\:prose h3 {
@@ -6343,6 +6361,7 @@ article ol {
     margin-bottom: 0.6em;
     line-height: 1.6;
     font-family: Inter;
+    font-family: sans-serif;
   }
 
   .xl\:prose h4 {
